--- a/competencies.html
+++ b/competencies.html
@@ -162,6 +162,21 @@
       transform: scaleX(1);
       transform-origin: bottom left;
     }
+
+    .download-btn {
+  display: inline-block;
+  background-color: #3498db; /* Button color */
+  color: white; /* Text color */
+  padding: 10px 20px; /* Button padding */
+  text-decoration: none; /* Remove underline from link */
+  border-radius: 5px; /* Rounded corners */
+  transition: background-color 0.3s; /* Smooth transition for hover effect */
+}
+
+.download-btn:hover {
+  background-color: #2980b9; /* Darker shade on hover */
+}
+    
 </style>
 </head>
 <body>
@@ -265,19 +280,10 @@
     </div>
 
     <div class="competency">
-      <h2>Technical Proficiency</h2>
+      <h2>Technical Skills</h2>
       <ul class="skill-list">
         <li>
-          <strong>ORACLE Primavera P6</strong>
-        </li>
-        <li>
           <strong>Microsoft Project</strong>
-        </li>
-        <li>
-          <strong>ASTA PowerProject</strong>
-        </li>
-        <li>
-          <strong>TILOS</strong>
         </li>
         <li>
           <strong>AutoCAD</strong>
@@ -310,6 +316,8 @@
         
     <a href="index.html" class="home-btn">🏠 Homepage</a>
     <a href="work-experiences.html" class="work-btn">💼 Professional Experience</a>
+    <!-- Resume Download Button -->
+    <a href="Resume/Selcan Gulec - Resume.pdf" download="Selcan Gulec - Resume.pdf" class="download-btn">Download My Resume</a>
      </div>
 
 </body>
