--- a/competencies.html
+++ b/competencies.html
@@ -317,7 +317,7 @@
     <a href="index.html" class="home-btn">🏠 Homepage</a>
     <a href="work-experiences.html" class="work-btn">💼 Professional Experience</a>
     <!-- Resume Download Button -->
-    <a href="Resume/Selcan Gulec - Resume.pdf" download="Selcan Gulec - Resume.pdf" class="download-btn">Download My Resume</a>
+    <a href="Resume/Selcan Gulec - Resume.pdf" download="Selcan Gulec - Resume.pdf" class="download-btn">📜 Download My Resume</a>
      </div>
 
 </body>
