--- a/work-experiences.html
+++ b/work-experiences.html
@@ -228,6 +228,9 @@
     
     <a href="index.html" class="home-btn">🏠 Homepage</a>
     <a href="competencies.html" class="competencies-btn">🏆 Competencies</a>
+    <!-- Resume Download Button -->
+    <a href="Resume/Selcan Gulec - Resume.pdf" download="Selcan Gulec - Resume.pdf" class="download-btn">📜 Download My Resume</a>
+    
   </div>
 </body>
 </html>
