--- a/aboutme.html
+++ b/aboutme.html
@@ -159,6 +159,8 @@
 
     <!-- Work Experiences button -->
     <a href="work-experiences.html" class="work-btn">💼 Professional Experience</a>
+    <a href="competencies.html" class="competencies-btn">🏆 Competencies</a>
+    
   </div>
 
   
