--- a/aboutme.html
+++ b/aboutme.html
@@ -80,7 +80,8 @@
 
     /* Style for the home button */
     .home-btn,
-    .work-btn {
+    .work-btn,
+    .competencies-btn{
       display: inline-block;
       background-color: #3498db;
       color: #fff;
@@ -93,7 +94,8 @@
     }
 
     .home-btn:hover,
-    .work-btn:hover {
+    .work-btn:hover,
+    .competencies-btn:hover {
       background-color: #2980b9;
     }
 
