--- a/competencies.html
+++ b/competencies.html
@@ -362,7 +362,7 @@
     <div class="competency">
       <h2>Languages</h2>
       <ul class="skill-list">
-        <li class="language-skill" data-skill="native">Turkish: Native proficiency</li>
+        <li class="language-skill" data-skill="native"><strong>Turkish:</strong> Native proficiency</li>
         <li class="language-skill" data-skill="professional">English: Professional working proficiency</li>
         <li class="language-skill" data-skill="intermediate">Spanish: Intermediate proficiency</li>
       </ul>
