--- a/competencies.html
+++ b/competencies.html
@@ -363,8 +363,8 @@
       <h2>Languages</h2>
       <ul class="skill-list">
         <li class="language-skill" data-skill="native"><strong>Turkish:</strong> Native proficiency</li>
-        <li class="language-skill" data-skill="professional">English: Professional working proficiency</li>
-        <li class="language-skill" data-skill="intermediate">Spanish: Intermediate proficiency</li>
+        <li class="language-skill" data-skill="professional"><strong>English:</strong> Professional working proficiency</li>
+        <li class="language-skill" data-skill="intermediate"><strong>Spanish:</strong> Intermediate proficiency</li>
       </ul>
     </div>
         
