--- a/competencies.html
+++ b/competencies.html
@@ -362,9 +362,9 @@
     <div class="competency">
       <h2>Languages</h2>
       <ul class="skill-list">
-        <li class="language-skill" data-skill="native"><strong>Turkish:</strong> Native proficiency</li>
-        <li class="language-skill" data-skill="professional"><strong>English:</strong> Professional working proficiency</li>
-        <li class="language-skill" data-skill="intermediate"><strong>Spanish:</strong> Intermediate proficiency</li>
+        <li class="language-skill" data-skill="native"><strong>Turkish: Native</strong> proficiency</li>
+        <li class="language-skill" data-skill="professional"><strong>English: Professional</strong> working proficiency</li>
+        <li class="language-skill" data-skill="intermediate"><strong>Spanish: Intermediate</strong> proficiency</li>
       </ul>
     </div>
         
