--- a/aboutme.html
+++ b/aboutme.html
@@ -47,20 +47,23 @@
     }
 
     p {
-      font-size: 1.2em;
-      line-height: 1.6;
-      color: #333;
+      font-size: 1em;
+      line-height: 1.8;
+      color: #333333;
     }
 
     .highlight {
       color: #e74c3c;
       font-weight: bold;
+      background-color: #f4f4f4;
+      padding: 0 5px;
+      border-radius: 3px;
     }
 
-    .image-container {
-      text-align: center;
-      margin-top: 20px;
-      position: relative;
+    p, .image-container {
+      opacity: 0;
+      transform: translateY(20px);
+      animation: fadeInUp 0.5s ease-out forwards;
     }
 
     .hover-image {
@@ -73,7 +76,24 @@
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
+    
+@keyframes fadeInUp {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
 
+/* Interactive Hover Effects for Images */
+    .image-container img {
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .image-container img:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+    }
+    
     .image-container:hover .hover-image {
       display: block;
     }
@@ -175,6 +195,12 @@
     function hideImage() {
       document.querySelector('.hover-image').style.display = 'none';
     }
+  </script>
+  <script>
+    // Assigning animation delay based on element order
+    document.querySelectorAll('.container > *').forEach((element, index) => {
+      element.style.animationDelay = `${0.3 + 0.2 * index}s`;
+    });
   </script>
 </body>
 
