--- a/aboutme.html
+++ b/aboutme.html
@@ -72,6 +72,7 @@
   max-width: 100%;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
     .highlight:hover + .image-container,
 .image-container:hover {
@@ -90,9 +91,9 @@
     }
 
     .image-container img:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-    }
+  transform: scale(1.05);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+}
     
 
     /* Style for the home button */
