--- a/aboutme.html
+++ b/aboutme.html
@@ -28,6 +28,13 @@
       }
     }
 
+    @keyframes fadeInUp {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+    
     .container {
       max-width: 800px;
       margin: 0 auto;
