--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ oal<!DOCTYPE html>
 										<h2><a href="https://www.appsheet.com/start/d60508d4-eee1-4b2c-9d38-5da331133be0#appName=daily_report_all_tabs-151940733&row=onlyvalue&table=_Per+User+Settings&view=Settings">SiteHercules, Construction daily report app</a></h2>
 									</header>
 									<a href="https://www.appsheet.com/start/d60508d4-eee1-4b2c-9d38-5da331133be0#appName=daily_report_all_tabs-151940733&row=onlyvalue&table=_Per+User+Settings&view=Settings" class="image fit"><img src="images/SITEHERCULES-Welcome page.png" alt="" /></a>
-									<p>Built using AppSheet, simplifies daily construction tracking and prioritizes user-friendliness for operators. By streamlining data input and access, this app enables more accurate analysis of construction progress.</p>
+									<p>Built using AppSheet, simplifies daily construction tracking and prioritizes user-friendliness for operators. By streamlining data input and access, this app enables more accurate analysis of construction progress. Kindly use; email_id = "anonymous@mail.com" and Enter password = "1234", and you will be directed to the Home. Take your time to explore!</p>
 									<ul class="actions special">
 										<li><a href="https://www.appsheet.com/start/d60508d4-eee1-4b2c-9d38-5da331133be0#appName=daily_report_all_tabs-151940733&row=onlyvalue&table=_Per+User+Settings&view=Settings" class="button">View</a></li>
 									</ul>
