--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ oal<!DOCTYPE html>
     <link rel="icon" type="image/jpg" href="images/My Icon.JPG">
 
   </head>
+
   <body>
     <!-- Add the loading animation code here -->
     <div id="loader-wrapper">
@@ -154,7 +155,16 @@ oal<!DOCTYPE html>
         if (window.location.href.endsWith("index.html")) {
           window.location.href = window.location.href.slice(0, -10);
         }
+	      
         </script>
-
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y8V42C7RDD"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	
+	  gtag('config', 'G-Y8V42C7RDD');
+	</script>
 	</body>
 </html>
