--- a/aboutme.html
+++ b/aboutme.html
@@ -181,5 +181,14 @@
       element.style.animationDelay = `${0.3 + 0.2 * index}s`;
     });
   </script>
+    <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y8V42C7RDD"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-Y8V42C7RDD');
+  </script>
 </body>
 </html>
