--- a/competencies.html
+++ b/competencies.html
@@ -388,4 +388,13 @@
   }
 });
      </script>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y8V42C7RDD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Y8V42C7RDD');
+</script>
 </html>
