--- a/index.html
+++ b/index.html
@@ -1,169 +1,170 @@
-<!doctype html>
+oal<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Selcan Gulec — Portfolio (Data • Planning)</title>
-  <meta name="description" content="Planning Engineer & Junior Data Scientist. SQL, Python, Tableau. Projects: YouTube Media Stats, Diega Chatbot, SiteHercules, Tableau Dashboards." />
-  <link rel="icon" href="/assets/favicon.ico" />
-  <link rel="preload" href="/assets/fonts/Inter-Variable.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <a class="skip" href="#main">Skip to content</a>
+  <head>
+    <title>My Portfolio</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+    <link rel="icon" type="image/jpg" href="images/My Icon.JPG">
 
-  <header class="site-header">
-    <nav class="nav">
-      <a class="brand" href="#top" aria-label="Home — Selcan Gulec">SELCAN GULEC</a>
-      <button class="nav-toggle" aria-expanded="false" aria-controls="menu">Menu</button>
-      <ul id="menu" class="menu">
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#experience">Experience</a></li>
-        <li><a href="#skills">Competencies</a></li>
-        <li><a href="#contact" class="btn btn-small">Contact</a></li>
-      </ul>
-    </nav>
+  </head>
 
-    <section class="hero" id="top">
-      <div class="hero-inner">
-        <img class="avatar" src="assets/avatar.jpg" alt="Portrait of Selcan Gulec" />
-        <h1>Planning Engineer → <span class="accent">Junior Data Scientist</span></h1>
-        <p class="sub">SQL • Python • Tableau • P6 | I build data apps and dashboards that turn messy data into clear actions.</p>
-        <div class="cta">
-          <a class="btn" href="#projects">See Projects</a>
-          <a class="btn ghost" href="assets/Selcan_Gulec_CV.pdf" target="_blank" rel="noopener">Download CV</a>
-          <a class="iconlink" href="https://www.linkedin.com/in/gulecsec" target="_blank" rel="noopener" aria-label="LinkedIn">↗ LinkedIn</a>
-          <a class="iconlink" href="https://github.com/gulecsec" target="_blank" rel="noopener" aria-label="GitHub">↗ GitHub</a>
-        </div>
-      </div>
-    </section>
-  </header>
+  <body>
+    <!-- Add the loading animation code here -->
+    <div id="loader-wrapper">
+      <div id="loader"></div>
+      <div class="loader-section section-left"></div>
+      <div class="loader-section section-right"></div>
+    </div>
 
-  <main id="main">
-    <section id="projects" class="section">
-      <h2>Featured Projects</h2>
-      <div class="grid">
-        <!-- YouTube Stats -->
-        <article class="card">
-          <img loading="lazy" src="assets/projects/youtube-stats.jpg" alt="Dashboard preview from YouTube Media Stats project" />
-          <div class="card-body">
-            <h3>YouTube Stats of Turkish News Media</h3>
-            <p>Combines YouTube API + web scraping to analyze 15 news channels and surface engagement insights.</p>
-            <ul class="tags">
-              <li>Python</li><li>Streamlit</li><li>API</li><li>Scraping</li>
-            </ul>
-            <div class="actions">
-              <a class="btn" href="https://gulecsec-mediastats-youtube-api-app-f7eqyr.streamlit.app" target="_blank" rel="noopener">Live Demo</a>
-              <a class="btn ghost" href="https://github.com/gulecsec" target="_blank" rel="noopener">Source</a>
-            </div>
-            <p class="meta">Last updated: Mar 27, 2023</p>
-          </div>
-        </article>
+		<!-- Wrapper -->
+			<div id="wrapper" class="fade-in">
 
-        <!-- Diega Chatbot -->
-        <article class="card">
-          <img loading="lazy" src="assets/projects/diega.jpg" alt="Screenshot of Diega school chatbot interface" />
-          <div class="card-body">
-            <h3>Diega — Le Wagon Mexico Web Assistant</h3>
-            <p>QA chatbot answering school-related questions using NLP techniques with a simple Streamlit UI.</p>
-            <ul class="tags">
-              <li>NLP</li><li>Python</li><li>Streamlit</li>
-            </ul>
-            <div class="actions">
-              <a class="btn" href="https://jimhouserock-capstone-project-diegachatbot--capstone-app-qnoy2d.streamlit.app" target="_blank" rel="noopener">Live Demo</a>
-              <a class="btn ghost" href="https://github.com/gulecsec" target="_blank" rel="noopener">Source</a>
-            </div>
-            <p class="meta">Last updated: Dec 16, 2022</p>
-          </div>
-        </article>
+				<!-- Intro -->
+					<div id="intro">
+						<h1>Selcan Gulec's Portfolio</h1>
+						<p>Meticulous Planning Engineer experienced in P6 | Jr. Data Scientist well-versed in SQL, Tableau, Python</p>
+						<ul class="actions">
+							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+						</ul>
+					</div>
 
-        <!-- SiteHercules -->
-        <article class="card">
-          <img loading="lazy" src="assets/projects/sitehercules.jpg" alt="Screenshot of SiteHercules construction daily report app" />
-          <div class="card-body">
-            <h3>SiteHercules — Daily Reports</h3>
-            <p>AppSheet app for daily construction tracking; improves data capture accuracy for progress analysis.</p>
-            <ul class="tags">
-              <li>AppSheet</li><li>Workflow</li><li>Operations</li>
-            </ul>
-            <div class="actions">
-              <a class="btn" href="https://www.appsheet.com" target="_blank" rel="noopener">Live Demo</a>
-              <a class="btn ghost" href="https://github.com/gulecsec" target="_blank" rel="noopener">Source</a>
-            </div>
-            <p class="meta">Last updated: Mar 12, 2023</p>
-          </div>
-        </article>
+    </div>
 
-        <!-- Tableau -->
-        <article class="card">
-          <img loading="lazy" src="assets/projects/tableau.jpg" alt="Preview of Tableau dashboards for HR and Airbnb" />
-          <div class="card-body">
-            <h3>Tableau Dashboards</h3>
-            <p>HR and Airbnb analyses. Data cleaning, viz design, and actionable insights presented in dashboards.</p>
-            <ul class="tags">
-              <li>Tableau</li><li>Data Viz</li>
-            </ul>
-            <div class="actions">
-              <a class="btn" href="https://public.tableau.com" target="_blank" rel="noopener">View on Tableau</a>
-            </div>
-            <p class="meta">Last updated: Feb 20, 2023</p>
-          </div>
-        </article>
-      </div>
-    </section>
+				<!-- Header -->
+					<header id="header">
+						<a href="index.html" class="logo">SELCAN GULEC</a>
+					</header>
 
-    <section id="about" class="section">
-      <h2>About</h2>
-      <p>I’m a Planning Engineer pivoting to Data Science. I build small, useful data apps and dashboards and enjoy translating ambiguity into clear deliverables. I’m based in Istanbul, open to remote roles.</p>
-    </section>
+				<!-- Nav -->
+					<nav id="nav">
+						<ul class="links">
+							<li class="active"><a href="#main">Portfolio Projects</a></li>
+							<li><a href="aboutme.html">About Me</a></li> <!-- New link for "About Me" -->
+							<li><a href="work-experiences.html">Professional Experience</a></li> <!-- New link for "Professional Experience" -->
+							<li><a href="competencies.html">Competencies</a></li>
 
-    <section id="experience" class="section">
-      <h2>Professional Experience</h2>
-      <ul class="timeline">
-        <li>
-          <strong>Planning Engineer</strong> — Primavera P6, scheduling, progress tracking, reporting.
-        </li>
-        <!-- Add real entries here -->
-      </ul>
-    </section>
+						</ul>
+						<ul class="icons">
+              <li><a href="https://www.linkedin.com/in/sgulec/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+              <li><a href="https://github.com/gulecsec" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+						</ul>
+					</nav>
 
-    <section id="skills" class="section">
-      <h2>Competencies</h2>
-      <ul class="chips">
-        <li>Python</li><li>SQL</li><li>Tableau</li><li>Primavera P6</li><li>Pandas</li><li>Streamlit</li>
-      </ul>
-    </section>
+				<!-- Main -->
+					<div id="main">
 
-    <section id="contact" class="section">
-      <h2>Contact</h2>
-      <p><strong>Location:</strong> Istanbul, TUR</p>
-      <p><strong>Email:</strong> <a href="mailto:selcangulec@proton.me">selcangulec@proton.me</a></p>
-      <form class="contact-form" action="https://formspree.io/f/your-id" method="POST">
-        <label> Name <input type="text" name="name" required></label>
-        <label> Email <input type="email" name="email" required></label>
-        <label> Message <textarea name="message" rows="5" required></textarea></label>
-        <button class="btn" type="submit">Send</button>
-      </form>
-    </section>
-  </main>
+						<!-- Featured Post -->
+							<article class="post featured">
+        <span class="date">March 27, 2023</span>
+        <header class="major">
 
-  <footer class="site-footer">
-    <small>© <span id="year"></span> Selcan Gulec</small>
-    <small class="template">Design adapted from a minimal starter.</small>
-  </footer>
+									<h2><a href="https://gulecsec-mediastats-youtube-api-app-f7eqyr.streamlit.app/">YouTube Stats of Turkish News Media</a></h2>
+									<p>This project combines data from the YouTube API and web scraping techniques to analyze 15 Turkish news media channels on YouTube. By gathering relevant statistics, insights into audience preferences and behaviors will be obtained to inform strategies for improving engagement and increasing viewership.</p>
+								</header>
+								<a href="https://gulecsec-mediastats-youtube-api-app-f7eqyr.streamlit.app/" class="image main"><img src="images/YouTubeStats.png" alt="" /></a>
+								<ul class="actions special">
+									<li><a href="https://gulecsec-mediastats-youtube-api-app-f7eqyr.streamlit.app/" class="button large">View</a></li>
+								</ul>
+							</article>
 
-  <script>
-    // accessible mobile menu
-    const toggle = document.querySelector('.nav-toggle');
-    const menu = document.getElementById('menu');
-    toggle.addEventListener('click', () => {
-      const open = toggle.getAttribute('aria-expanded') === 'true';
-      toggle.setAttribute('aria-expanded', String(!open));
-      menu.classList.toggle('open');
-    });
-    // year
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
-</body>
+              <article>
+        <span class="date">December 16, 2022</span>
+                <header>
+                  <h2><a href="https://jimhouserock-capstone-project-diegachatbot--capstone-app-qnoy2d.streamlit.app/">Diega, Le Wagon Mexico Web Assistant</a></h2>
+                </header>
+                <a href="https://jimhouserock-capstone-project-diegachatbot--capstone-app-qnoy2d.streamlit.app/" class="image fit"><img src="images/Diega.png" alt="" /></a>
+                <p>The chatbot is designed to accurately and contextually answer school-related questions using NLP techniques. It also features a user-friendly web interface built on the Streamlit app.</p>
+                <ul class="actions special">
+                  <li><a href="https://jimhouserock-capstone-project-diegachatbot--capstone-app-qnoy2d.streamlit.app/" class="button">View</a></li>
+                </ul>
+              </article>
+
+
+								<article>
+                  <span class="date">March 12, 2023</span>
+									<header>
+										<h2><a href="https://www.appsheet.com/start/d60508d4-eee1-4b2c-9d38-5da331133be0#appName=daily_report_all_tabs-151940733&row=onlyvalue&table=_Per+User+Settings&view=Settings">SiteHercules, Construction daily report app</a></h2>
+									</header>
+									<a href="https://www.appsheet.com/start/d60508d4-eee1-4b2c-9d38-5da331133be0#appName=daily_report_all_tabs-151940733&row=onlyvalue&table=_Per+User+Settings&view=Settings" class="image fit"><img src="images/SITEHERCULES-Welcome page.png" alt="" /></a>
+									<p>Built using AppSheet, simplifies daily construction tracking and prioritizes user-friendliness for operators. By streamlining data input and access, this app enables more accurate analysis of construction progress. Kindly use; email_id = "anonymous@mail.com" and Enter password = "1234", and you will be directed to the Home. Take your time to explore!</p>
+									<ul class="actions special">
+										<li><a href="https://www.appsheet.com/start/d60508d4-eee1-4b2c-9d38-5da331133be0#appName=daily_report_all_tabs-151940733&row=onlyvalue&table=_Per+User+Settings&view=Settings" class="button">View</a></li>
+									</ul>
+								</article>
+
+                <article>
+                  <span class="date">February 20, 2023</span>
+									<header>
+										<h2><a href="https://public.tableau.com/app/profile/selcan.gulec">My TABLEAU Projects</a></h2>
+									</header>
+									<a href="https://public.tableau.com/app/profile/selcan.gulec" class="image fit"><img src="images/AIRBNB TABLEAU PROJECT.png" alt="" /></a>
+									<p>Two Tableau projects were completed for my portfolio, focusing on HR data analysis and Airbnb data analysis. Both projects involved data cleaning, visualization, and analysis using Tableau.
+                    The insights gained from these projects helped inform decision-making for the respective organizations.</p>
+									<ul class="actions special">
+
+                    <li><a href="https://public.tableau.com/app/profile/selcan.gulec" class="button">View</a></li>
+                    <hr>
+									</ul>
+								</article>
+
+						<section class="split contact">
+							<section class="alt">
+								<h3>Location</h3>
+								<p>Istanbul, TUR</p>
+							</section>
+
+							<section>
+								<h3>Email</h3>
+								<p><a href="#">selcangulec@proton.me</a></p>
+							</section>
+							<section>
+								<h3>Social</h3>
+								<ul class="icons alt">
+									<li><a href="https://www.linkedin.com/in/sgulec/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://github.com/gulecsec" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								</ul>
+							</section>
+						</section>
+					</footer>
+
+				<!-- Copyright -->
+					<div id="copyright">
+						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+					</div>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+      <script src="assets/js/jquery.dropotron.min.js"></script>
+      <!-- JavaScript files for the loading animation -->
+      <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+      <script src="assets/js/loader.js"></script>
+
+      <!-- Main JavaScript file -->
+      <script src="assets/js/main.js"></script>
+      <script>
+        if (window.location.href.endsWith("index.html")) {
+          window.location.href = window.location.href.slice(0, -10);
+        }
+	      
+        </script>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y8V42C7RDD"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	
+	  gtag('config', 'G-Y8V42C7RDD');
+	</script>
+	</body>
 </html>
