--- a/work-experiences.html
+++ b/work-experiences.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <title>Professional Experience</title>
   <link rel="stylesheet" href="assets/css/main.css" />
+  <link rel="stylesheet" href="assets/css/work-experiences.css" />
   <link rel="icon" type="image/jpg" href="images/My Icon.JPG">
   <style>
     body {
