--- a/work-experiences.html
+++ b/work-experiences.html
@@ -5,115 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <title>Professional Experience</title>
   <link rel="stylesheet" href="assets/css/main.css" />
+  <link rel="stylesheet" href="assets/css/work-experiences.css" />
   <link rel="icon" type="image/jpg" href="images/My Icon.JPG">
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #dcedf9;
-      color: #1d6fa5;
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-    .container {
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 20px;
-      background-color: #fff;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-      border-radius: 10px;
-      overflow: hidden;
-    }
-
-    h1 {
-      color: #0c3451;
-      text-align: center;
-      margin-top: 10px;
-      margin-bottom: 20px;
-      font-family: 'Arial', sans-serif;
-      font-weight: bold;
-      text-transform: uppercase;
-      letter-spacing: 2px;
-      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-      background: -webkit-linear-gradient(#0c3451, #3498db);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      animation: fadeInScale 2s ease-in-out;
-    }
-
-    h2 { color: #071824; margin-top: 10px; }
-    p  { font-size: 1.2em; line-height: 1.6; color: #555; margin-top: 10px; }
-    .highlight { color: #e74c3c; font-weight: bold; }
-
-    /* You said you like the container style — giving each experience a tidy card */
-    .experience {
-      margin-bottom: 30px;
-      border: 2px solid #eeeeee;
-      padding: 1.25rem;
-      border-radius: 8px;
-      background: #fff;
-    }
-    .experience h2 { color: #3498db; margin-bottom: 5px; }
-    .experience p  { color: #777; margin-top: 5px; }
-    .experience h2 + p { margin-top: 10px; }
-
-    /* Buttons */
-    .home-btn, .competencies-btn, .download-btn {
-      display: inline-block;
-      background-color: #3498db;
-      color: #fff;
-      padding: 10px 20px;
-      text-decoration: none;
-      border-radius: 5px;
-      transition: background-color 0.3s;
-      margin-top: 20px;
-      cursor: pointer;
-    }
-    .home-btn:hover, .competencies-btn:hover, .download-btn:hover { background-color: #2980b9; }
-    .work-icon { margin-right: 8px; }
-
-    .section { padding: 20px 0; border-bottom: 1px solid #ddd; }
-    .section:last-child { border-bottom: none; }
-    .section-heading { color: #3498db; text-align: center; font-size: 2em; margin-bottom: 20px; }
-
-    .experience p, .experience ul { margin-top: 0; margin-bottom: 10px; }
-
-    a { color: #3498db; text-decoration: none; position: relative; }
-    a:after {
-      content: '';
-      position: absolute; width: 100%; transform: scaleX(0); height: 2px; bottom: 0; left: 0;
-      background-color: #e74c3c; transform-origin: bottom right; transition: transform 0.25s ease-out;
-    }
-    a:hover:after { transform: scaleX(1); transform-origin: bottom left; }
-
-    /* Clean, accessible details accordion */
-    details.details-accordion {
-      border: 2px solid #eeeeee;
-      border-radius: 8px;
-      background: #fafafa;
-      margin: .75rem 0 0 0;
-    }
-    details.details-accordion[open] {
-      background: #f7fbff;
-      border-color: #18bfef;
-    }
-    summary.details-summary {
-      list-style: none;
-      cursor: pointer;
-      padding: .9rem 1rem;
-      font-weight: 700;
-      color: #0c3451;
-    }
-    summary.details-summary::-webkit-details-marker { display: none; }
-    .details-panel { padding: .5rem 1rem 1rem; }
-    .details-panel ul { margin: .25rem 0 0 0; padding-left: 1.1rem; }
-    .details-panel li { margin: .2rem 0; }
-
-    @keyframes fadeInScale {
-      0%   { opacity: 0; transform: translateY(-20px) scale(0.9); }
-      100% { opacity: 1; transform: translateY(0) scale(1); }
-    }
-  </style>
 </head>
 
 <body>
